fixed the giant gap in the sidebar

--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -6,7 +6,7 @@
     font-weight: bold;
     font-size: 20px;
     display: grid;
-    grid-template-rows: 1fr 4fr 6fr;
+    grid-template-rows: 1fr 4fr 8fr;
     justify-content: start;
     align-items: start;
 }
